<resources>
    <string name="app_name">Home Tutor</string>
    <string name="create_new_account">Create New Account</string>
    <string name="signup">SignUp</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="nice_to_see_you">So Nice to see you</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="home_tutor">Home Tutor</string>
</resources>